# AI-agent

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  package-lock.json  package.json  tsconfig.json
doc/: 待优化项.md  项目开发的动机.txt
server/: .env  .env.example  pyproject.toml
server/ai_ppt_agent_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/app/: config.py  main.py
server/app/api/: deps.py  router.py
server/app/api/v1/: export.py  ingestion.py  layout.py  outline.py  pipeline.py  render.py
server/app/core/llm/: client.py  prompts.py  streaming.py
server/app/core/parsers/: __init__.py  docx.py  pdf.py  pptx.py  svg.py
server/app/core/pipeline/: architect.py  enricher.py  ingestion.py  orchestrator.py  planner.py  progressive.py  renderer.py
server/app/models/: schemas.py
server/app/services/: export.py  search.py
server/app/utils/: json_repair.py  outline_transform.py  svg_builder.py  svg_utils.py
server/prompts/: 1a_architect_zero.md  1b_architect_doc.md  2_bento_grid.md  3_svg_renderer.md
server/tests/: conftest.py
src/app/: App.tsx  types.ts
src/app/components/: BentoLayoutPanel.tsx  LandingPage.tsx  SVGExportPanel.tsx  SetupPanel.tsx  StickyOutlinePanel.tsx  WorkspaceEditor.tsx
src/app/lib/: sse.ts
src/styles/: tailwind.css  theme.css
